Create conclusion of the project

--- a/Income Classification.ipynb
+++ b/Income Classification.ipynb
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "id": "ffd5c972-23dc-427c-9546-0ab12ec33b11",
    "metadata": {},
    "outputs": [
@@ -646,6 +646,33 @@
     "plt.show()\n",
     "plt.clf()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60efc03c-e5e7-447a-a80c-4da32bdb3312",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "In conclusion, this project analyzed various features to effectively train a model for predicting whether an individual earns more than $50k annually. Utilizing one-hot encoding, we integrated categorical data into our model while also analyzing the correlation between features. Furthermore, we assessed the model employing evaluation metrics such as accuracy and F1 score. \n",
+    "\n",
+    "Ultimately, the model's parameters were explored by employing the ROC curve to investigate the impact of different thresholds. We also used the AUC score to evaluate the model's distinguish capabilities between income classes. This analytical approach enhanced our understanding of the model's capabilities and performance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0643951a-637b-4f94-9018-36f5342942d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "595959f0-0ec4-43c8-ad00-278534c575f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
